<resources>
    <string name="app_name">My Weather App</string>
    <string name="the_weather_app">The Weather App</string>
    <string name="abdurghaman">Abdurghaman</string>
    <string name="st10456904">ST10456904</string>
    <string name="todo">TODO</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="the_weather_app2">The Weather App</string>
    <string name="enter_in_day">Enter in day</string>
    <string name="textview">TextView</string>
    <string name="weather">Weather</string>
    <string name="clear">Clear</string>
    <string name="exit2">Exit</string>
    <string name="detailed">Detailed</string>
    <string name="please_enter_valid_information">Please enter valid information</string>
    <string name="temperature_on_is_c">Temperature on %1$s is %2$s°C</string>
    <string name="the_weather_app3">The Weather App</string>
    <string name="min_8_max_19_raining">min=8 , max=19 ,Raining</string>
    <string name="min_6_max_11_raining">min=6 , max=11 ,Raining</string>
    <string name="min_10_max_13_cloudy">min=10 , max=13 ,Cloudy</string>
    <string name="min_10_max_15_cloudy">min=10 ,max=15 ,Cloudy</string>
    <string name="min_10_max_17_cloudy">min=10 , max=17 , Cloudy</string>
    <string name="min_12_max_29_sunny">min=12, max=29, Sunny</string>
    <string name="min_15_max_25_sunny">min=15 , max=25 , Sunny</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="back">Back</string>
</resources>